--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -273,6 +273,35 @@ button {
     padding: 0.6em;
 }
 
+.star-display {
+    display: flex;
+    justify-content: center;
+    font-size: 24pt;
+    -webkit-text-stroke: 3px var(--main-text);
+    color: var(--background)
+}
+
+.fullstar {
+    color: var(--accent)
+}
+
+fieldset {
+    border: 0;
+}
+
+textarea {
+    margin: 0.3em auto;
+    width: 80%;
+    text-indent: 0px;
+    text-shadow: none;
+    display: block;
+    text-align: start;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+
+    height: 100px;
+}
+
 .item-actions {
     align-self: stretch;
     display: flex;
