--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -14,6 +14,7 @@
     font-size: 14pt;
 
     background-color: var(--background);
+    color: var(--main-text);
 
     overflow-x: hidden;
 }
@@ -96,7 +97,7 @@ header {
     80% { transform: rotate(-50deg);}
 }
 
-.homepage, .shopping, .shopping-cart {
+.homepage, .shopping, .shopping-cart, .reviews {
     display: none;
 }
 
@@ -207,6 +208,7 @@ button {
     background-color: var(--header-text);
     color: var(--background);
     border-radius: 4px;
+    border: 2px outset var(--active-tab);
 }
 
 .shop-all {
@@ -264,6 +266,64 @@ button {
     align-items: center;
 
     position: relative;
+}
+
+input[type=number] {
+    border-radius: 3px;
+    border: 1px solid var(--header-text)
+}
+
+.review-contents {
+    border: 3px solid var(--accent);
+    border-radius: 10px;
+    margin: 0 1em 1em 1em;
+    padding: 0.6em;
+}
+
+.star-display {
+    display: flex;
+    justify-content: center;
+    font-size: 24pt;
+    -webkit-text-stroke: 3px var(--main-text);
+    color: var(--background)
+}
+
+.fullstar {
+    color: #ffc766;
+}
+
+fieldset {
+    border: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+}
+
+textarea {
+    height: 100px;
+    text-shadow: none;
+    text-align: start;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    resize: none;
+    font-family: sans-serif;
+}
+
+textarea::-webkit-scrollbar-track {
+    background-color: #fff;
+    background-image: none!important;
+}
+
+input[type=text], textarea {
+    width: 80%;
+    border: 2px solid var(--header-text);
+    border-radius: 5px;
+    padding: 3px 5px;
+}
+
+input:focus, textarea:focus {
+    outline: 2px inset var(--accent);
 }
 
 .item-actions {
