--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- ref files -->
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}" >
     <script src="https://kit.fontawesome.com/03c91ce9d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
