--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -25,7 +25,7 @@
             <nav class="accounts">
                 <nav>
                 {% if user.is_authenticated %}
-                    <span>Howdy, {{ user.username }}!</span>
+                    <span>Howdy, <span id="username" @click="openProfile">{{ user.username }}</span>!</span>
                     <a href="{% url 'logout' %}">LOGOUT</a>
                 {% else %}
                     <a href="{% url 'login' %}">LOGIN</a> or
@@ -80,6 +80,12 @@
                         <h3>LOW STOCK ALERT</h3>
                     </div>
                 </section>
+            </article>
+
+            <article class="user-profile" :class="{'fullmenu':showProfile}">
+                <h3>{{user.username}}</h3>
+                <p>Maybe some custom stuff here.</p>
+                <order-history></order-history>
             </article>
 
             <article class="shopping-cart" :class="{'fullmenu':showCart}">
