--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -84,7 +84,7 @@
 
             <article class="user-profile" :class="{'fullmenu':showProfile}">
                 <h3>{{user.username}}</h3>
-                <p>Maybe some custom stuff here.</p>
+                <!-- <p>Maybe some custom stuff here.</p> -->
                 <order-history></order-history>
             </article>
 
