--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- ref files -->
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}" >
     <script src="https://kit.fontawesome.com/03c91ce9d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
@@ -24,7 +25,7 @@
             <nav class="accounts">
                 <nav>
                 {% if user.is_authenticated %}
-                    <span>Howdy, {{ user.username }}!</span>
+                    <span>Howdy, <span id="username" @click="openProfile">{{ user.username }}</span>!</span>
                     <a href="{% url 'logout' %}">LOGOUT</a>
                 {% else %}
                     <a href="{% url 'login' %}">LOGIN</a> or
@@ -79,6 +80,12 @@
                         <h3>LOW STOCK ALERT</h3>
                     </div>
                 </section>
+            </article>
+
+            <article class="user-profile" :class="{'fullmenu':showProfile}">
+                <h3>{{user.username}}</h3>
+                <!-- <p>Maybe some custom stuff here.</p> -->
+                <order-history></order-history>
             </article>
 
             <article class="shopping-cart" :class="{'fullmenu':showCart}">
