--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -305,6 +305,12 @@ input[type=number] {
     padding: 0.6em;
 }
 
+.reply-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+}
+
 .replies-inner {
     display: flex;
     flex-direction: column;
@@ -334,10 +340,21 @@ input[type=number] {
     width: 80%;
     margin: 0;
     padding: 0.3em;
+    display: flex;
+    flex-direction: column;
 }
 
 .reply p {
     margin: 0.3em;
+}
+
+.reply i {
+    align-self: flex-end;
+}
+
+.thread {
+    width: 70%;
+    margin-left: 1em;
 }
 
 .post-time {
