begin structure of admin panel, remove artist label on products as was not being used

--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -101,7 +101,8 @@ header {
     80% { transform: rotate(-50deg);}
 }
 
-.homepage, .shopping, .shopping-cart, .reviews, .user-profile {
+.homepage, .shopping, .shopping-cart, 
+.reviews, .user-profile, .admin-panel {
     display: none;
 }
 
