--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -138,6 +138,10 @@ header {
     background-color: var(--active-tab);
 }
 
+.panel h3 {
+    text-align: center;
+}
+
 .inventory-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -156,6 +160,51 @@ header {
 
 .inventory-edit button{
     padding: 3px;
+}
+
+.new-fields {
+    border-radius: 5px;
+    background-color: var(--background);
+    margin: auto;
+    width: fit-content;
+    padding: 0.3em 1em;
+    filter: drop-shadow(0px 1px 2px var(--header-text));
+}
+
+.new-fields input, select{
+    border-radius: 5px;
+    padding: 3px 5px;
+    margin: 3px 0;
+}
+
+.new-fields input[type=text], select {
+    border: 1px solid var(--header-text);
+}
+
+input[type=file]::-webkit-file-upload-button {
+    visibility: hidden;
+}
+
+input[type=file]::before {
+    content: 'Select';
+    display: inline-block;
+    background-color: var(--header-text);
+    border: 1px solid var(--header-text);
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    cursor: pointer;
+    color: var(--background);
+    font-weight: 700;
+}
+
+input[type=file]:hover::before {
+    border-color: black;
+}
+
+input[type=file]:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
 
 .primary-banner {
@@ -424,7 +473,7 @@ fieldset input[type=text], textarea {
     padding: 3px 5px;
 }
 
-input:focus, textarea:focus {
+input:focus, textarea:focus, select:focus {
     outline: 2px inset var(--accent);
 }
 
