style add product and include local order number to checkout page

--- a/stickerfellas/templates/order_complete.html
+++ b/stickerfellas/templates/order_complete.html
@@ -14,7 +14,8 @@
 {% block content %}
     <div class="order-details">
         <h3>Thank you for your order, {{info.customer_details.name}}!</h3>
-        Order Number: <strong>{{info.id}}</strong>
+        <checkout-complete></checkout-complete>
+        Stripe Order ID: <strong>{{info.id}}</strong>
         <ul><strong>Order info</strong>:
         {% for product in info.line_items.data %}
             <li>{{product.description}} x{{product.quantity}}</li>
@@ -22,7 +23,5 @@
         </ul>
 
         A copy of this confirmation has been sent to {{ info.customer_details.email }}
-    
-        <checkout-complete></checkout-complete>
     </div>
 {% endblock %}
