--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -169,12 +169,19 @@ header {
     width: fit-content;
     padding: 0.3em 1em;
     filter: drop-shadow(0px 1px 2px var(--header-text));
+
+    display: flex;
+    flex-direction: column;
 }
 
 .new-fields input, select{
     border-radius: 5px;
     padding: 3px 5px;
     margin: 3px 0;
+}
+
+.new-fields button {
+    align-self: center;
 }
 
 .new-fields input[type=text], select {
