--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -101,7 +101,8 @@ header {
     80% { transform: rotate(-50deg);}
 }
 
-.homepage, .shopping, .shopping-cart, .reviews, .user-profile {
+.homepage, .shopping, .shopping-cart, 
+.reviews, .user-profile, .admin-panel {
     display: none;
 }
 
@@ -135,6 +136,82 @@ header {
 
 .browsebar>*:active{
     background-color: var(--active-tab);
+}
+
+.panel h3 {
+    text-align: center;
+}
+
+.inventory-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: center;
+}
+
+.inventory-edit {
+    text-align: center;
+    border: 1px solid var(--header-text);
+    border-radius: 3px;
+    padding: 5px;
+    height: 100px;
+    width: 180px;
+}
+
+.inventory-edit button{
+    padding: 3px;
+}
+
+.new-fields {
+    border-radius: 5px;
+    background-color: var(--background);
+    margin: auto;
+    width: fit-content;
+    padding: 0.3em 1em;
+    filter: drop-shadow(0px 1px 2px var(--header-text));
+
+    display: flex;
+    flex-direction: column;
+}
+
+.new-fields input, select{
+    border-radius: 5px;
+    padding: 3px 5px;
+    margin: 3px 0;
+}
+
+.new-fields button {
+    align-self: center;
+}
+
+.new-fields input[type=text], select {
+    border: 1px solid var(--header-text);
+}
+
+input[type=file]::-webkit-file-upload-button {
+    visibility: hidden;
+}
+
+input[type=file]::before {
+    content: 'Select';
+    display: inline-block;
+    background-color: var(--header-text);
+    border: 1px solid var(--header-text);
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    cursor: pointer;
+    color: var(--background);
+    font-weight: 700;
+}
+
+input[type=file]:hover::before {
+    border-color: black;
+}
+
+input[type=file]:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
 
 .primary-banner {
@@ -403,7 +480,7 @@ fieldset input[type=text], textarea {
     padding: 3px 5px;
 }
 
-input:focus, textarea:focus {
+input:focus, textarea:focus, select:focus {
     outline: 2px inset var(--accent);
 }
 
