--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -683,4 +683,49 @@ footer {
         text-align: right;
         padding-right: 2em;
     }
+
+    .browsebar {
+        gap: 0px;
+        padding: 0;
+        position: relative;
+    }
+
+    .browsebar div {
+        width: 150px;
+        height: 2rem;
+        line-height: 2rem;
+
+        background-color: var(--background);
+        border-top: 0px;
+        border-bottom: 0;
+        border-radius: 0;
+        color: var(--main-text);
+    }
+
+    .browsebar div:first-child {
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+    }
+
+    .browsebar div:first-child::after {
+        content: " ➔ ";
+    }
+
+    .largeonly-hidden {
+        display: none;
+    }
+
+    .submenu {
+        display: block;
+    }
+
+    .browsebar div:hover {
+        background-color: var(--accent);
+        text-shadow: var(--background) 1px 1px;
+    }
+
+    .admin-only {
+        position: absolute;
+        right: 0px;
+    }
 }
