--- a/stickerfellas/templates/index.html
+++ b/stickerfellas/templates/index.html
@@ -152,7 +152,7 @@
         </main>
 
         <footer>
-            Fake LLC©
+            <span>Fake LLC©</span><span>FAQ</span><span>About</span>
         </footer>
     </div>  
 </body>
