--- a/stickerfellas/static/css/style.css
+++ b/stickerfellas/static/css/style.css
@@ -678,6 +678,22 @@ footer a {
     margin: 2em auto;
 }
 
+.modal ol {
+    padding-right: 1em;
+}
+
+.modal li {
+    font-weight: 700;
+    font-size: 14pt;
+    padding: 0.5em 0;
+}
+
+.modal li > ul li {
+    font-weight: 200;
+    font-size: 12pt;
+    padding: 0;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
